<resources>
    <string name="app_name">Tracktor</string>
    <string name="timeLabel">Время:</string>
    <string name="distanceLabel">Расстояние:</string>
    <string name="averagespeedLabel">Средняя скорость:</string >
    <string name="start">Старт</string>
    <string name="end">Конец</string>
    <string name="stop">Стоп</string>
    <string name="statistic">Статистика</string>
    <string name="share">Поделиться</string>
    <string name="settings">Настройки</string>
    <string name="stopRoute">Закончить маршрут</string>
    <string name="route_active">Маршрут активен!</string>
    <string name="permissions_denied">Вы не дали разрешения!</string>
    <string name="dont_stay">Не стойте на месте!</string>

    <string name="menu_item_about">О приложении</string>
    <string name="title_activity_preference">Настройки</string>
    <string name="title_distance_unit">Единица измерения</string>
    <string name="dialog_title_distance_unit">Выберите единицу измерения</string>
    <string name="title_auto_shutdown">Автоотключение</string>
    <string name="dialog_title_auto_shutdown">Выберите время автоотключения</string>
    <string name="title_user_weight">Вес пользователя</string>
    <string name="dialog_title_user_weight">Вес пользователя</string>

    <string name="pref_key_unit">unit</string>
    <string name="pref_key_shutdown">shutdown</string>
    <string name="pref_key_weight">weight</string>
    <string name="pref_default_value_unit">1</string>
    <string name="pref_default_value_shutdown">-1</string>
    <string name="pref_default_value_weight">60</string>
    <string name="btn_delete_result">Удалить</string>

    <string name="permissions_request_title">Внимание!</string>
    <string name="permissions_request_message">Для корректной работы приложения необходим доступ к местоположению. Для сохранения скриншотов необходим доступ к внешнему хранилищу</string>
    <string name="ok">Понятно</string>
    <string name="back_off">Приложение не может работать без доступа к местоположению</string>
    <string name="notify_info">Время: %s\nРасстояние: %s "</string>
    <string name="pref_default_value_height">170</string>
    <string name="dialog_title_user_height" >Рост пользователя</string>
    <string name="pref_key_height" >height</string>
    <string name="pref_default_value_age">33</string>
    <string name="dialog_title_user_age" >Возраст пользователя</string>
    <string name="pref_key_age" >age</string>
    <string name="pref_key_gender">gender</string>
    <string name="title_gender" >Are you man or woman?</string>
    <string name="rbtn_bycicle_text">Велосипед</string>
    <string name="rbtn_walk_text" >Ходьба</string>
    <string name="rbtn_run_text" >Бег</string>
    <string name="spentCaloriesLabel">Затрачено калорий</string>
    <string name="dateLabel">Дата:</string>
    <string name="btn_save_label">Сохранить</string>
    <string name="btn_cancel_label">Отмена</string>
    <string name="dialog_title_new_comment">Новый комментарий</string>
    <string name="dialog_title_edit_comment">Редактировать комментарий</string>
    <string name="CommentLabel">Комментарий</string>
    <string name="list_empty">The list is empty</string>
    <string name="sortOrder">Сортировка по возрастанию/убыванию-</string>
    <string name="sortByDateOrDuration">Сортировка по дате/продолжительности/расстоянию</string>
    <string name="actionLabel">Вид активности</string>
    <string name="tvOptionsLabel">⋮ ⋮</string>
    <string name="expand">Расширить</string>
    <string name="title_compression_ratio">Степень сжатия изображения в %</string>
    <string name="pref_key_compression_ratio">compression_ratio</string>
    <string name="title_color_line">Цвет линии</string>
    <string name="pref_key_color_line">color_line</string>
    <string name="pref_key_line_width">line_width</string>
    <string name="title_line_width">Толщина линии</string>
    <string name="title_icon_start">Icon for start button</string>
    <string name="pref_key_icon_start">icon_start</string>
    <string name="pref_key_icon_stop">icon_stop</string>
    <string name="title_icon_stop">Icon for start button</string>
    />

</resources>
