<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_activity_preference">

    <ListPreference
        android:defaultValue="@string/pref_default_value_unit"
        android:dialogTitle="@string/dialog_title_distance_unit"
        android:entries="@array/entries_list_preference_unit"
        android:entryValues="@array/entryvalues_list_preference_unit"
        android:key="@string/pref_key_unit"
        android:title="@string/title_distance_unit" />

    <ListPreference
        android:defaultValue="@string/pref_default_value_shutdown"
        android:dialogTitle="@string/dialog_title_auto_shutdown"
        android:entries="@array/entries_list_preference_shutdown"
        android:entryValues="@array/entryvalues_list_preference_shutdown"
        android:key="@string/pref_key_shutdown"
        android:title="@string/title_auto_shutdown" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_value_weight"
        android:dialogTitle="@string/dialog_title_user_weight"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_weight"
        android:lines="1"
        android:title="@string/dialog_title_user_weight" />
    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="Sex yes please"
        android:entries="@array/entries_list_preference_gender"
        android:entryValues="@array/entryvalues_list_preference_gender"
        android:key="@string/pref_key_gender"
        android:title="@string/title_gender"
        />
    <EditTextPreference
        android:defaultValue="@string/pref_default_value_height"
        android:dialogTitle="@string/dialog_title_user_height"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_height"
        android:lines="1"
        android:title="@string/dialog_title_user_height" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_value_age"
        android:dialogTitle="@string/dialog_title_user_age"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_age"
        android:lines="1"
        android:title="@string/dialog_title_user_age" />

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="compression ratio"
        android:entries="@array/entries_list_compression_ratio"
        android:entryValues="@array/entryvalues_list_compression_ratio"
        android:key="@string/pref_key_compression_ratio"
        android:title="@string/title_compression_ratio"
        />

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="color line"
        android:entries="@array/entries_list_color_line"
        android:entryValues="@array/entryvalues_list_color_line"
        android:key="@string/pref_key_color_line"
        android:title="@string/title_color_line"
        />
    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="compression ratio"
        android:entries="@array/entries_list_compression_ratio"
        android:entryValues="@array/entryvalues_list_compression_ratio"
        android:key="@string/pref_key_compression_ratio"
        android:title="@string/title_compression_ratio"
        />

    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="line width"
        android:entries="@array/entries_list_line_width"
        android:entryValues="@array/entryvalues_list_line_width"
        android:key="@string/pref_key_line_width"
        android:title="@string/title_line_width"
        />



</PreferenceScreen>