<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSortByAscOrDesc"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/sortOrder"
        app:showAsAction="ifRoom|withText"
        android:visible="true"
        />
    <item
        android:id="@+id/actionSortByDateOrDuration"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/sortByDateOrDuration"
        app:showAsAction="ifRoom|withText"
        android:visible="true"

        />

    <item
        android:id="@+id/actionShare"
        android:icon="?attr/actionModeShareDrawable"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText"
        android:visible="false"
        />
    <item
        android:id="@+id/actionDelete"
        android:title="@string/btn_delete_result"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="ifRoom|withText"
        android:visible="false"
    />


</menu>