<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateLabel" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            tools:text="02.11.2020" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeLabel" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="4dp"
            tools:text="23:12:11" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanceLabel" />


        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="4dp"
            tools:text="2412 м." />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averagespeedLabel" />


        <TextView
            android:id="@+id/tvAverageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="4dp"
            tools:text="5 km/h" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spentCaloriesLabel" />


        <TextView
            android:id="@+id/tvSpentCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="0dp"
            android:paddingStart="4dp"
            tools:text="1000 kkal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
            >


        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">



        <RadioButton
            android:id="@+id/rbBicycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_bycicle_text"
            android:visibility="visible"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rbWalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_walk_text"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rbRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_run_text"
            android:visibility="visible"
            tools:visibility="visible" />
    </RadioGroup>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivScreenshot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>